--- a/resume-Alberth-Rodriguez/index.html
+++ b/resume-Alberth-Rodriguez/index.html
@@ -34,7 +34,7 @@
     <main>
 
         <h1>
-            Engr. Alberth Rodriguez
+            Engr. Alberth Rodriguez S
         </h1>
 
         <img class="pi" src="images/Picture.png" alt="Picture Alberth">
